Ensure toolbar is visible when header is stuck

--- a/app/assets/stylesheets/books.css
+++ b/app/assets/stylesheets/books.css
@@ -60,7 +60,7 @@
 }
 
 .book__toolbar {
-  inset-block-start: 0;
+  inset-block-start: calc(var(--footer-height) - var(--block-space));
   position: sticky;
   z-index: 1;
 }
